# archolith-filter

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  QWEN.md  README.md  THIRD-PARTY-LICENSES.txt  gemini.md  pyproject.toml
.agent/: CHANGELOG.md  README.md  architecture.md  data_models.md
.agent/workflows/: code_conventions.md
.githooks/: pre-push
.github/: copilot-instructions.md
archolith_filter/: __init__.py  _patterns.py  agent_solo.py  config.py  dedupe.py  normalize.py  paths.py  raw_store.py  redact.py  strip_thinking.py  telemetry.py
archolith_filter/extractors/: __init__.py  base.py  bash.py  read_file.py
archolith_filter/filters/: __init__.py  build_output.py  fs_listing.py  git_diff.py  git_log.py  git_show.py  git_status.py  lint_output.py  logs.py  read_file.py  typecheck_output.py
archolith_filter/shrink/: json_shrink.py  orchestrator.py  read_file_truncate.py  truncate.py  (+1 more)
archolith_rtk/: __init__.py  agent_solo.py  classifier.py  config.py  context_manager.py  filter_meta.py  paths.py  raw_store.py  redact.py  shrink.py  strip_ansi.py  strip_thinking.py  telemetry.py
benchmarks/: conftest.py  corpora.py  practical_report.py  test_context_bench.py  test_filter_bench.py  test_shrink_bench.py
scripts/: _check_parts.py  _check_schema.py  _check_state.py  _check_tool_parts.py  _extract_claude_session.py  _extract_opencode_session.py  agent_solo_benchmark.py  filter_benchmark.py  rtk_benchmark.py  token_corpus_analysis.py
tests/: conftest.py  test_agent_solo.py  test_context_manager.py  test_filters.py  test_normalize.py  test_paths.py  test_redact.py  test_shrink.py  test_strip_thinking.py
(+35 files in other folders)
