[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archolith-rtk"
version = "0.1.0"
description = "Token Reduction Toolkit — deterministic output filtering for LLM agent contexts"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Archolith" }]
keywords = ["llm", "token-reduction", "output-filtering", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Repository = "https://github.com/archolith/archolith-rtk"
Issues = "https://github.com/archolith/archolith-rtk/issues"

[project.optional-dependencies]
tokenizer = ["tiktoken>=0.7"]
context = ["archolith-proxy>=0.1.0"]
dev = ["pytest>=8", "pytest-benchmark>=5", "pytest-cov>=5", "ruff>=0.5"]

[project.entry-points."archolith.tool_extractors"]
bash_rtk = "archolith_rtk.extractors.bash:BashRtkExtractor"
read_file_rtk = "archolith_rtk.extractors.read_file:ReadFileRtkExtractor"

[tool.hatch.build.targets.wheel]
packages = ["archolith_rtk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
